# Linux-Filesystem-Emulator

./: CMakeLists.txt
include/: debug.h  filesys.h  utility.h
src/: file_operations.c  filesys.c  hw3.c  inode_manip.c  main.c  terminal.cpp  utility.c
tests/include/: test_util.hpp  tests_utils.h
tests/output/: AttemptDeleteCWD.txt  DirectoryExist.txt  DirectoryNotEmpty.txt  DirectoryNotFound.txt  FailedDBlockAlloc.txt  FailedINodeAlloc.txt  FileExist.txt  FileNotFound.txt  InvalidFileType.txt  InvalidFilename.txt  List0.txt  List1.txt  ObjectNotFound.txt  Tree1.txt  Tree2.txt
tests/src/: available_dblocks_tests.cpp  available_inodes_tests.cpp  change_directory_tests.cpp  claim_available_dblock_tests.cpp  claim_available_inode_tests.cpp  fs_open_tests.cpp  fs_read_tests.cpp  fs_seek_tests.cpp  fs_write_tests.cpp  get_path_string_tests.cpp  inode_modify_data_tests.cpp  inode_read_data_tests.cpp  inode_shrink_data_tests.cpp  inode_write_data_tests.cpp  list_tests.cpp  new_directory_tests.cpp  new_file_tests.cpp  new_filesystem_tests.cpp  new_terminal_tests.cpp  release_dblock_tests.cpp  release_inode_tests.cpp  remove_directory_tests.cpp  remove_file_tests.cpp  test_util.cpp  tree_tests.cpp
